Fix overflow issue for some fonts

--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ button:hover{
 }
 
 .bodytext {
-	height: 320px;
+	min-height: 320px;
 	font-size: 1em;
 	display: block;
 	border-radius: 4px;
@@ -125,15 +125,14 @@ button:hover{
 
 .box{
 	width: 600px;
-	margin: auto;
-	margin-top: 50px;
-	height: 80%;
 	text-align:left;
 	padding: 50px 50px 40px 50px;
 	background: #fff;
 	border-radius: 4px;
 	border: 1px solid rgba(0, 0, 0, 0.1);
 	color: #000;
+  margin: auto;
+	margin-top: 30px;
 }
 
 .feather {
@@ -183,10 +182,14 @@ button:hover{
 
 .whichfont{
 	color: #333;
-	font-family: Inter;
+	line-height: 1.7em;
 	border-top: 1px solid #eee;
-	padding-top: 20px;
-	margin-top: 60px;
+	padding: 20px 12px 0px 12px;
+	margin: 20px 0px 0px 0px;
+}
+
+.buttons{
+	padding-left: 10px;
 }
 
 /* added media queries for larger screens */
